syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "./storage";

package storage;

message GetMessageRequest {
  int64 user_id = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message MessageResponse {
  bool success = 1;
}

service StorageService {
  rpc StreamWithAck (stream GetMessageRequest) returns (stream MessageResponse);
}